--- a/RidesJSF/src/main/webapp/resources/css/menu.css
+++ b/RidesJSF/src/main/webapp/resources/css/menu.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -26,6 +24,7 @@ body {
     align-items: center; /* Alineación vertical */
     background-color: #333333;
     padding: 28px 20px; /* Reducido el padding para hacerlo más delgado */
+    margin-bottom: 60px;
     width: 100%;
     box-sizing: border-box;
     color: white;
@@ -74,19 +73,20 @@ body {
 
 /* Contenedor principal */
 .main-container {
+	background-color: #f0f0f0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     flex: 1;
-    padding: 10px 20px; /* Reducir padding superior para acercar la tabla */
-    margin-top: -40px;  /* Margen negativo para mover la tabla hacia arriba */
+    padding: -11px 20px; /* Reducir padding superior para acercar la tabla */
+    margin-top: -57px;  /* Margen negativo para mover la tabla hacia arriba */
     box-sizing: border-box;
 }
 
-/* Título "Aukeratu" */
 .main-container h3 {
     font-size: 2rem; /* Ajustamos el tamaño a más pequeño */
+    margin-top:-17px;
     margin-bottom: 20px; /* Espaciado inferior */
     text-align: center;
 }
@@ -94,7 +94,7 @@ body {
 /* Tabla de botones */
 table {
     width: auto; /* Evita que la tabla sea demasiado ancha */
-    margin-top: 20px;
+    margin-top: 10px;
     text-align: center;
     box-sizing: border-box;
 }
