--- a/RidesJSF/src/main/webapp/resources/css/queryRides.css
+++ b/RidesJSF/src/main/webapp/resources/css/queryRides.css
@@ -4,64 +4,60 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    height: 100vh; /* Ocupa toda la altura de la ventana */
+    height: 100vh;
     background-color: #ffffff;
 }
 
-/* Estilo del encabezado */
 .header {
     display: flex;
     justify-content: space-between;
-    align-items: center; /* Alineación vertical */
+    align-items: center;
     background-color: #333333;
-    padding: 28px 20px; /* Reducido el padding para hacerlo más delgado */
+    padding: 28px 20px;
     width: 100%;
     box-sizing: border-box;
     color: white;
 }
 
-/* Imagen del encabezado con mayor tamaño */
 .header-left img {
-    width: 180px; /* Aumentado el tamaño de la imagen */
-    height: auto; /* Asegura que no se distorsione */
+    width: 180px;
+    height: auto;
     mix-blend-mode: lighten;
 }
 
-/* Contenedor central para centrar el título */
 .header-center {
-    flex-grow: 1; /* Ocupa el espacio restante */
+    flex-grow: 1;
     display: flex;
-    justify-content: center; /* Asegura que el título esté centrado */
+    justify-content: center;
 }
 
-/* Título centrado, ahora con margen izquierdo */
 .header-title {
     font-size: 2rem;
     color: white;
     margin: 0;
-    margin-left: 100px; /* Ajuste de margen a la izquierda para moverlo */
+    margin-left: 100px;
 }
-/* Botón de logout */
+
 .header-right .btn {
     padding: 10px 20px;
-    background-color: #333333;  /* El mismo color de fondo que el header */
-    color: #ffffff;  /* Texto blanco para el botón */
+    background-color: #333333;
+    color: #ffffff;
     border: 1px solid #d3d3d3;
     border-radius: 8px;
     cursor: pointer;
     font-size: 1rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;  /* Añadimos transición al brillo */
+    transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
 }
 
 .header-right .btn:hover {
-    background-color: #555555;  /* Un tono ligeramente más claro que el color del header */
+    background-color: #555555;
     transform: scale(1.1);
-    box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.6);  /* Brillo suave alrededor */
+    box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.6);
 }
 
 .query-btn, .logout-btn {
-    margin-left: 10px; /* Agrega margen entre los botones */
+    margin-left: 10px;
     padding: 10px 15px;
     font-size: 14px;
     border-radius: 5px;
@@ -70,67 +66,65 @@ body {
 }
 
 .query-btn {
-    background-color: #4CAF50; /* Verde */
+    background-color: #4CAF50;
     color: white;
 }
 
 .main-container {
     background-color: #f0f0f0;
     padding: 20px;
-    border-radius: 0; /* Quita el border-radius */
-    box-shadow: none; /* Elimina la sombra */
+    border-radius: 0;
+    box-shadow: none;
     box-sizing: border-box;
 }
 
 .container {
-    display: flex;  /* Usamos flexbox para alinear los bloques en línea */
-    flex-wrap: wrap;  /* Permite que los bloques se envuelvan en pantallas pequeñas */
-    justify-content: center;  /* Alinea los bloques horizontalmente en el centro */
-    width: 100%;  /* El contenedor ocupa el 100% del cuadro principal */
-    gap: 0px;  /* Espacio entre los bloques */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    gap: 0px;
 }
 
 .block {
     display: flex;
     flex-direction: column;
-    justify-content: center; /* Centra verticalmente el contenido */
-    align-items: center; /* Centra horizontalmente el contenido */
+    justify-content: center;
+    align-items: center;
     padding: 20px;
     margin: 10px 50px;
 }
 
-
 .block-center {
-    width: 100%;  /* El tercer bloque ocupará toda la línea */
+    width: 100%;
     padding: 20px;
     margin-top: 20px;
-    text-align: center; /* Cambiado de justify a center */
-    box-sizing: border-box;  /* Asegura que el padding y márgenes no afecten el tamaño */
+    text-align: center;
+    box-sizing: border-box;
 
-    display: flex; /* Habilita Flexbox */
-    justify-content: center; /* Centra horizontalmente los botones */
-    align-items: center; /* Centra verticalmente los botones */
-    gap: 10px; /* Espaciado entre los botones */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
 
-/* Estilo del pie de página */
 .footer {
-    background-color: #333333;  /* Gris muy oscuro para el pie de página */
-    padding: 15px 20px; /* Ajustado padding */
+    background-color: #333333;
+    padding: 15px 20px;
     width: 100%;
     box-sizing: border-box;
     display: flex;
-    justify-content: space-between; /* Asegura que el contenido esté distribuido */
-    color: white; /* Letras blancas en el pie de página */
-    font-size: 1rem; /* Tamaño de fuente más pequeño para el pie de página */
+    justify-content: space-between;
+    color: white;
+    font-size: 1rem;
 }
 
 .footer-left,
 .footer-right {
     display: inline-block;
-    text-align: left; /* Alineación izquierda para el texto de la izquierda */
+    text-align: left;
 }
 
 .footer-right {
-    text-align: right; /* Alineación derecha para el texto de la derecha */
+    text-align: right;
 }
